--- a/index.ipynb
+++ b/index.ipynb
@@ -182,29 +182,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    print(list_of_terms[0][0]* x_value**list_of_terms[0][1] +list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
+    "    print(list_of_terms[0][0]* x_value**list_of_terms[0][1] +list_of_terms[1][0]*x_value**list_of_terms[1][1])\n",
     "                                                                                                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "16\n"
+     ]
     }
    ],
    "source": [
