--- a/index.ipynb
+++ b/index.ipynb
@@ -500,7 +500,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "four_x_plus_fifteen = [(4, 1), (15, 0)]\n"
+    "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
+    "def "
    ]
   },
   {
