--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,7 @@
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "def "
+    "def output_at()"
    ]
   },
   {
