Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,7 @@
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "def output_at()"
+    "def output_at(four_x_plus_fifteen, x),x_values)"
    ]
   },
   {
