--- a/index.ipynb
+++ b/index.ipynb
@@ -501,7 +501,8 @@
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "def output_at((four_x_plus_fifteen, x),x_values)"
+    "def output_at((four_x_plus_fifteen, x),x_values):\n",
+    "    return "
    ]
   },
   {
