--- a/index.ipynb
+++ b/index.ipynb
@@ -502,7 +502,7 @@
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
     "def output_at((four_x_plus_fifteen, x),x_values):\n",
-    "    return "
+    "    return four_x_plus_fifteen[0]"
    ]
   },
   {
