--- a/index.ipynb
+++ b/index.ipynb
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    return list_of_terms[0][0]* x_value**list_of_terms[0][1] +list_of_terms[1][0]*x_value**list_of_terms[1][1])\n",
+    "    return list_of_terms[0][0]* x_value**list_of_terms[0][1] +list_of_terms[1][0]*x_value**list_of_terms[1][1]\n",
     "                                                                                                "
    ]
   },
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "scrolled": false
    },
@@ -239,84 +239,6 @@
     },
     {
      "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2689\n",
-      "2512\n",
-      "2341\n",
-      "2176\n",
-      "2017\n",
-      "1864\n",
-      "1717\n",
-      "1576\n",
-      "1441\n",
-      "1312\n",
-      "1189\n",
-      "1072\n",
-      "961\n",
-      "856\n",
-      "757\n",
-      "664\n",
-      "577\n",
-      "496\n",
-      "421\n",
-      "352\n",
-      "289\n",
-      "232\n",
-      "181\n",
-      "136\n",
-      "97\n",
-      "64\n",
-      "37\n",
-      "16\n",
-      "1\n",
-      "-8\n",
-      "-11\n",
-      "-8\n",
-      "1\n",
-      "16\n",
-      "37\n",
-      "64\n",
-      "97\n",
-      "136\n",
-      "181\n",
-      "232\n",
-      "289\n",
-      "352\n",
-      "421\n",
-      "496\n",
-      "577\n",
-      "664\n",
-      "757\n",
-      "856\n",
-      "961\n",
-      "1072\n",
-      "1189\n",
-      "1312\n",
-      "1441\n",
-      "1576\n",
-      "1717\n",
-      "1864\n",
-      "2017\n",
-      "2176\n",
-      "2341\n",
-      "2512\n"
-     ]
-    },
-    {
-     "data": {
       "application/vnd.plotly.v1+json": {
        "data": [
         {
@@ -324,7 +246,7 @@
          "name": "data",
          "text": [],
          "type": "scatter",
-         "uid": "3803d2f8-bc51-11e9-b1ce-b34efb7d63d6",
+         "uid": "6a5454a2-bc52-11e9-b1ce-b34efb7d63d6",
          "x": [
           -30,
           -29,
@@ -388,66 +310,66 @@
           29
          ],
          "y": [
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null,
-          null
+          2689,
+          2512,
+          2341,
+          2176,
+          2017,
+          1864,
+          1717,
+          1576,
+          1441,
+          1312,
+          1189,
+          1072,
+          961,
+          856,
+          757,
+          664,
+          577,
+          496,
+          421,
+          352,
+          289,
+          232,
+          181,
+          136,
+          97,
+          64,
+          37,
+          16,
+          1,
+          -8,
+          -11,
+          -8,
+          1,
+          16,
+          37,
+          64,
+          97,
+          136,
+          181,
+          232,
+          289,
+          352,
+          421,
+          496,
+          577,
+          664,
+          757,
+          856,
+          961,
+          1072,
+          1189,
+          1312,
+          1441,
+          1576,
+          1717,
+          1864,
+          2017,
+          2176,
+          2341,
+          2512
          ]
         }
        ],
@@ -456,10 +378,10 @@
        }
       },
       "text/html": [
-       "<div id=\"40c79614-eb36-4b76-b271-1193b40f045e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"40c79614-eb36-4b76-b271-1193b40f045e\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null], \"type\": \"scatter\", \"uid\": \"38280f7e-bc51-11e9-b1ce-b34efb7d63d6\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"280a44fd-b98f-4a9a-86a3-67ba2e56ad6d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"280a44fd-b98f-4a9a-86a3-67ba2e56ad6d\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2689, 2512, 2341, 2176, 2017, 1864, 1717, 1576, 1441, 1312, 1189, 1072, 961, 856, 757, 664, 577, 496, 421, 352, 289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232, 289, 352, 421, 496, 577, 664, 757, 856, 961, 1072, 1189, 1312, 1441, 1576, 1717, 1864, 2017, 2176, 2341, 2512], \"type\": \"scatter\", \"uid\": \"6a595b46-bc52-11e9-b1ce-b34efb7d63d6\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"40c79614-eb36-4b76-b271-1193b40f045e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"40c79614-eb36-4b76-b271-1193b40f045e\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null], \"type\": \"scatter\", \"uid\": \"38280f7e-bc51-11e9-b1ce-b34efb7d63d6\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"280a44fd-b98f-4a9a-86a3-67ba2e56ad6d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"280a44fd-b98f-4a9a-86a3-67ba2e56ad6d\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [-30, -29, -28, -27, -26, -25, -24, -23, -22, -21, -20, -19, -18, -17, -16, -15, -14, -13, -12, -11, -10, -9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29], \"y\": [2689, 2512, 2341, 2176, 2017, 1864, 1717, 1576, 1441, 1312, 1189, 1072, 961, 856, 757, 664, 577, 496, 421, 352, 289, 232, 181, 136, 97, 64, 37, 16, 1, -8, -11, -8, 1, 16, 37, 64, 97, 136, 181, 232, 289, 352, 421, 496, 577, 664, 757, 856, 961, 1072, 1189, 1312, 1441, 1576, 1717, 1864, 2017, 2176, 2341, 2512], \"type\": \"scatter\", \"uid\": \"6a595b46-bc52-11e9-b1ce-b34efb7d63d6\"}], {\"title\": \"3x^2 - 11\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
