Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "def"
+    "def output_at"
    ]
   },
   {
