--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
-    "def output_at"
+    "def output_at(list_of_terms, x_value)"
    ]
   },
   {
