--- a/index.ipynb
+++ b/index.ipynb
@@ -534,13 +534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "four_x_plus_fifteen = [(4, 1), (15, 0)]\n",
     "def output_at(list_of_terms, x_value):\n",
-    "    return "
+    "    return list_of_terms[0][0]* x_value**list_of_terms[0][1] +list_of_terms[1][0]*x_value**list_of_terms[1][1]"
    ]
   },
   {
