--- a/index.ipynb
+++ b/index.ipynb
@@ -545,12 +545,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-26-7c6102e59935>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-7c6102e59935>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return (output_at(list_of_terms, x_value+delta_x) - output_at(list_of_terms, x_value)/delta_x\u001b[0m\n\u001b[0m                                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def delta_f(list_of_terms, x_value, delta_x):\n",
-    "    return (output_at(list_of_terms, x_value+delta_x) - output_at(list_of_terms, x_value)"
+    "    return (output_at(list_of_terms, x_value+delta_x) - output_at(list_of_terms, x_value)/delta_x"
    ]
   },
   {
