Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -739,8 +739,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#def derivative_of(list_of_terms, x_value, delta_x):\n",
+    "#    return (output_at(list_of_terms, x_value+delta_x) - output_at(list_of_terms, x_value))/delta_x\n",
+    "\n",
     "def derivative_of(list_of_terms, x_value, delta_x):\n",
-    "    return (output_at(list_of_terms, x_value+delta_x) - output_at(list_of_terms, x_value))/delta_x"
+    "    delta = delta_f(list_of_terms, x_value, delta_x)\n",
+    "    return round(delta/delta_x, 3)"
    ]
   },
   {
